IALERT-3980: Create IssueActionModel and add logging for issue tracker distribution